src/objects/IdeasSiteSetup__c/IdeasSiteSetup__c.object-meta.xml
<CustomObject>
    <description>Ideas Site Setup</description>
    <label>Ideas Site Setup</label>
    <nameField>
        <label>Ideas Site Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ideas Site Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>