src/objects/IdeasSiteSetup__c/fields/CacheMaxAge__c.field-meta.xml
<CustomField>
    <fullName>CacheMaxAge__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The amount of time (in seconds) the content distribution network (CDN) server caches the pages of your Ideas site. A value of zero (0) disables caching. CDN caching is automatically enabled on  sites. We recommend setting this to 300 seconds (5 minutes).</inlineHelpText>
    <label>Cache Max Age</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>