src/objects/IdeasSiteSetup__c/fields/HomeBody6__c.field-meta.xml
<CustomField>
    <fullName>HomeBody6__c</fullName>
    <label>Home - Body 6</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>