src/objects/IdeasSiteSetup__c/fields/LoginBody__c.field-meta.xml
<CustomField>
    <fullName>LoginBody__c</fullName>
    <label>Login - Body</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>