src/objects/IdeasSiteSetup__c/fields/OverrideIdeaForgotPasswordConfirm__c.field-meta.xml
<CustomField>
    <fullName>OverrideIdeaForgotPasswordConfirm__c</fullName>
    <label>Override - ideaForgotPasswordConfirm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>