src/objects/IdeasSiteSetup__c/fields/OverrideIdeaList__c.field-meta.xml
<CustomField>
    <fullName>OverrideIdeaList__c</fullName>
    <label>Override - ideaList</label>
    <length>255</length>
    <type>Text</type>
</CustomField>